--- a/client/travel/.env
+++ b/client/travel/.env
@@ -1,2 +1,2 @@
 REACT_APP_API_URL=http://api.aviationstack.com
-REACT_APP_API_URL=https://thegrandtravelsbackend.vercel.app/api
+REACT_APP_API_URL=https://thegrandtravelsbackend.vercel.app
