--- a/client/travel/package.json
+++ b/client/travel/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "start": "vite",
     "homepage": ".",
     "lint": "eslint .",
     "preview": "vite preview"
