chore: remove start script from package.json and simplify CORS configuration

--- a/client/travel/package.json
+++ b/client/travel/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "start": "vite",
+    "start": "",
     "homepage": ".",
     "lint": "eslint .",
     "preview": "vite preview"
