chore: remove unused agent dashboard files and update server static paths for uploads and invoices

--- a/client/travel/package.json
+++ b/client/travel/package.json
@@ -1,6 +1,5 @@
 {
   "name": "travel",
-  "private": true,
   "version": "0.0.0",
   "type": "module",
   "homepage": ".",
@@ -10,7 +9,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "start": "",
+    "start": "vite preview",
     "homepage": ".",
     "lint": "eslint .",
     "preview": "vite preview"
