--- a/Admin-Dashboard/package.json
+++ b/Admin-Dashboard/package.json
@@ -32,19 +32,24 @@
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf/renderer": "^4.1.6",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.8",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^6.16.0",
+    "recharts": "^2.15.1",
     "socket.io-client": "^4.8.1",
     "zod": "^3.22.3"
   },
   "devDependencies": {
     "@types/format-util": "^1.0.3",
     "@types/react": "^18.2.15",
+    "@types/react-chartjs-2": "^2.0.2",
     "@types/react-dom": "^18.2.7",
+    "@types/recharts": "^1.8.29",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
