--- a/Agent-Panel/package.json
+++ b/Agent-Panel/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^6.16.0",
+    "recharts": "^2.15.1",
     "socket.io-client": "^4.8.1",
     "zod": "^3.22.3"
   },
@@ -46,6 +47,7 @@
     "@types/format-util": "^1.0.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/recharts": "^1.8.29",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
